@@ -24,7 +24,7 @@
     Sub-signature of {!Sig.G}. *)
 module type G = sig
   type t
-  module V : Sig.HASHABLE
+  module V : Sig.COMPARABLE
   val iter_vertex : (V.t -> unit) -> t -> unit
   val iter_succ : (V.t -> unit) -> t -> V.t -> unit
   val in_degree : t -> V.t -> int
@@ -48,14 +48,6 @@ module Make(G: G) : sig
 
 end
 
-module type Comparable_G = sig
-  type t
-  module V : Sig.COMPARABLE
-  val iter_vertex : (V.t -> unit) -> t -> unit
-  val iter_succ : (V.t -> unit) -> t -> V.t -> unit
-  val in_degree : t -> V.t -> int
-end
-
 (** Provide the same features than {!Make}, except that the resulting
     topological ordering is stable according to vertices comparison: if two
     vertices [v1] and [v2] are topologically equal, [v1] is presented first to
@@ -64,8 +56,13 @@ end
     property is not guaranteed by the functor {!Make}. The counterpart is a less
     efficient implementation: worst time complexity is O(E*V*ln(V)) instead of
     O(E*V) (with E = number of edges and V = number of vertices. *)
-module Make_stable(G: Comparable_G): sig
+module Make_stable(G: G): sig
   val fold : (G.V.t -> 'a -> 'a) -> G.t -> 'a -> 'a
   val iter : (G.V.t -> unit) -> G.t -> unit
 end
 
+(*
+Local Variables:
+compile-command: "make -C .."
+End:
+*)
